# SimpleDB

./: .gitignore  CMakeLists.txt
includes/: server.h
src/: main.c  server.c
